# hackathon-tt-py-gptull

./: CLAUDE.md
.claude/commands/: commit.md  eval.md  review-output.md  score.md  trace-failure.md  transpiler-dev.md
translations/ghostfolio_pytx/: tt_import_map.json
translations/ghostfolio_pytx_example/app/implementation/helpers/: calculation_helper.py  compute_engine.py  date_utils.py  portfolio_helper.py
tt/: PHASE3_BRIEF.md  PLAN.md  pyproject.toml
tt/tests/: test_expressions.py  test_parser.py  test_statements.py
tt/tt/: expressions.py  models.py  parser.py  pipeline.py  statements.py  translator.py
tt/tt/scaffold/ghostfolio_pytx/: tt_import_map.json
tt/tt/scaffold/ghostfolio_pytx/app/implementation/: date_utils.py
