[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt"
version = "0.1.0"
description = "Translation tool - copies implementation from ghostfolio_pytx_example"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.0",
    "requests>=2.32",
    "ruff>=0.4",
    "pyright>=1.1",
    "pre-commit>=3.0",
]

[project.scripts]
tt = "tt.cli:main"

[tool.setuptools.packages]
find = {}

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (enforce type hints)
    "N",   # pep8-naming
    "RET", # flake8-return (single return)
    "SIM", # flake8-simplify (reduce complexity)
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (no commented-out code)
    "PL",  # pylint
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["tt"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tt --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["tt"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
